fix(copyright-info): raises the z-index of the content container

--- a/source/css/layout/_partial/article-copyright-info.styl
+++ b/source/css/layout/_partial/article-copyright-info.styl
@@ -33,6 +33,7 @@
       margin-top 1rem
 
       .bottom-item {
+        z-index $z-index-10
         margin-right 1.2rem
 
         .type {
